--- a/config/boards/shields/proXiao/proXiao.dtsi
+++ b/config/boards/shields/proXiao/proXiao.dtsi
@@ -9,7 +9,7 @@
 / {
 	chosen {
 		zmk,kscan = &kscan0;
-		zmk,matrix_transform = &seven_column;
+		zmk,matrix_transform = &five_column;
 	};
 
 default_transform: keymap_transform_0 {
