updater keymap and clean up

--- a/build.yaml
+++ b/build.yaml
@@ -7,6 +7,4 @@
 ---
 include:
   - board: seeeduino_xiao_ble
-    shield: proXiao_left
-  - board: seeeduino_xiao_ble
-    shield: proXiao_right
+    shield: settings_reset 
