--- a/config/proXiao.conf
+++ b/config/proXiao.conf
@@ -13,3 +13,6 @@ CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000
 CONFIG_ZMK_EXT_POWER=y
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=n
 CONFIG_ZMK_BATTERY_REPORT_INTERVAL=120
+
+CONFIG_EC11=y 
+CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
