--- a/config/boards/shields/proXiao/proXiao.dtsi
+++ b/config/boards/shields/proXiao/proXiao.dtsi
@@ -70,3 +70,7 @@ RC(3,0) RC(3,1) RC(3,2) RC(3,3) RC(3,4) RC(3,5) RC(4,5) RC(4,6) RC(3,6) RC(3,7) 
     };
 };
 
+
+&xiao_spi { status = "disabled"; };
+&xiao_i2c { status = "disabled"; };
+&xiao_serial { status = "disabled"; };
