--- a/config/boards/shields/proXiao/proXiao.dtsi
+++ b/config/boards/shields/proXiao/proXiao.dtsi
@@ -9,76 +9,40 @@
 / {
 	chosen {
 		zmk,kscan = &kscan0;
-		zmk,matrix_transform = &six_column;
+		zmk,matrix_transform = &default_transform;
 	};
 
-default_transform: keymap_transform_4 {
-		compatible = "zmk,matrix-transform";
-		columns = <1>;
+default_transform: keymap_transform_0 {
+		compatible="zmk,matrix-transform";
+		columns = <13>;
 		rows = <1>;
-		map = <RC(0,0)>;
-	};
-
-	seven_column: keymap_transform_0 {
-		compatible = "zmk,matrix-transform";
-		columns = <12>;
-		rows = <4>;
-// | SW0  | SW1  | SW2  | SW3  | SW4  | SW5  | SW6  |   | SW6  | SW5  | SW4  | SW3  | SW2  | SW1  | SW0  |
-// |      | SW7  | SW8  | SW9  | SW10 | SW11 | SW12 |   | SW12 | SW11 | SW10 | SW9  | SW8  | SW7  |
-// |      | SW13 | SW14 | SW15 | SW16 | SW17 | SW18 |   | SW18 | SW17 | SW16 | SW15 | SW14 | SW13 |
-//                             | SW19 | SW20 | SW21 |   | SW21 | SW20 | SW19 |
 		map = <
-    RC(3,0) RC(0,0) RC(0,1) RC(0,2) RC(0,3) RC(0,4) RC(0,5)  RC(0,6) RC(0,7) RC(0,8) RC(0,9) RC(0,10) RC(0,11) RC(3,11)
-            RC(1,0) RC(1,1) RC(1,2) RC(1,3) RC(1,4) RC(1,5)  RC(1,6) RC(1,7) RC(1,8) RC(1,9) RC(1,10) RC(1,11)
-            RC(2,0) RC(2,1) RC(2,2) RC(2,3) RC(2,4) RC(2,5)  RC(2,6) RC(2,7) RC(2,8) RC(2,9) RC(2,10) RC(2,11)
-                                    RC(3,3) RC(3,4) RC(3,5)  RC(3,6) RC(3,7) RC(3,8)
+		RC(0,0)  RC(0,1)  RC(0,2)  RC(0,3) RC(0,4)  RC(0,5)  RC(0,6)  RC(0,7)  RC(0,8)  RC(0,9)  RC(0,10)  RC(0,11)  RC(0,12) RC(0,13)  RC(0,14)  RC(0,15) 
 		>;
 	};
 
-	six_column: keymap_transform_1 {
-		compatible = "zmk,matrix-transform";
-		columns = <12>;
-		rows = <4>;
-// | SW1  | SW2  | SW3  | SW4  | SW5  | SW6  |   | SW6  | SW5  | SW4  | SW3  | SW2  | SW1  |
-// | SW7  | SW8  | SW9  | SW10 | SW11 | SW12 |   | SW12 | SW11 | SW10 | SW9  | SW8  | SW7  |
-// | SW13 | SW14 | SW15 | SW16 | SW17 | SW18 |   | SW18 | SW17 | SW16 | SW15 | SW14 | SW13 |
-//                      | SW19 | SW20 | SW21 |   | SW21 | SW20 | SW19 |
-		map = <
-    RC(0,0) RC(0,1) RC(0,2) RC(0,3) RC(0,4) RC(0,5)  RC(0,6) RC(0,7) RC(0,8) RC(0,9) RC(0,10) RC(0,11)
-    RC(1,0) RC(1,1) RC(1,2) RC(1,3) RC(1,4) RC(1,5)  RC(1,6) RC(1,7) RC(1,8) RC(1,9) RC(1,10) RC(1,11)
-    RC(2,0) RC(2,1) RC(2,2) RC(2,3) RC(2,4) RC(2,5)  RC(2,6) RC(2,7) RC(2,8) RC(2,9) RC(2,10) RC(2,11)
-                            RC(3,3) RC(3,4) RC(3,5)  RC(3,6) RC(3,7) RC(3,8)
-		>;
-	};
-
-	five_column: keymap_transform_2 {
-		compatible = "zmk,matrix-transform";
-		columns = <10>;
-		rows = <4>;
-// | SW2  | SW3  | SW4  | SW5  | SW6  |   | SW6  | SW5  | SW4  | SW3  | SW2  |
-// | SW8  | SW9  | SW10 | SW11 | SW12 |   | SW12 | SW11 | SW10 | SW9  | SW8  |
-// | SW14 | SW15 | SW16 | SW17 | SW18 |   | SW18 | SW17 | SW16 | SW15 | SW14 |
-//               | SW19 | SW20 | SW21 |   | SW21 | SW20 | SW19 |
-		map = <
-RC(0,1) RC(0,2) RC(0,3) RC(0,4) RC(0,5)  RC(0,6) RC(0,7) RC(0,8) RC(0,9) RC(0,10)
-RC(1,1) RC(1,2) RC(1,3) RC(1,4) RC(1,5)  RC(1,6) RC(1,7) RC(1,8) RC(1,9) RC(1,10)
-RC(2,1) RC(2,2) RC(2,3) RC(2,4) RC(2,5)  RC(2,6) RC(2,7) RC(2,8) RC(2,9) RC(2,10)
-                        RC(3,3) RC(3,4) RC(3,5)  RC(3,6) RC(3,7) RC(3,8)
-		>;
-	};
 
 	kscan0: kscan {
-		compatible = "zmk,kscan-gpio-matrix";
+		compatible = "zmk,kscan-gpio-direct";
 		label = "KSCAN";
-
-		diode-direction = "col2row";
-		row-gpios
-            = <&xiao_d 7 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>
-            , <&xiao_d 8 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>
-            , <&xiao_d 9 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>
-            , <&xiao_d 10 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>
-			;
-		
+		input-gpios
+		= <&xiao_d 0 (GPIO_ACTIVE_LOW | GPIO_PULL_UP)>
+		, <&xiao_d 1 (GPIO_ACTIVE_LOW | GPIO_PULL_UP)>
+		, <&xiao_d 2 (GPIO_ACTIVE_LOW | GPIO_PULL_UP)>
+		, <&xiao_d 3 (GPIO_ACTIVE_LOW | GPIO_PULL_UP)>
+		, <&xiao_d 4 (GPIO_ACTIVE_LOW | GPIO_PULL_UP)>
+		, <&xiao_d 5 (GPIO_ACTIVE_LOW | GPIO_PULL_UP)>
+		, <&xiao_d 6 (GPIO_ACTIVE_LOW | GPIO_PULL_UP)>
+		, <&xiao_d 7 (GPIO_ACTIVE_LOW | GPIO_PULL_UP)>
+		, <&xiao_d 8 (GPIO_ACTIVE_LOW | GPIO_PULL_UP)>
+		, <&xiao_d 9 (GPIO_ACTIVE_LOW | GPIO_PULL_UP)>
+		, <&xiao_d 10 (GPIO_ACTIVE_LOW | GPIO_PULL_UP)>
+		, <&gpio0  9 (GPIO_ACTIVE_LOW | GPIO_PULL_UP)>
+	    , <&gpio0  10 (GPIO_ACTIVE_LOW | GPIO_PULL_UP)>
+		, <&gpio0  16 (GPIO_ACTIVE_LOW | GPIO_PULL_UP)>
+		, <&gpio1  00 (GPIO_ACTIVE_LOW | GPIO_PULL_UP)>
+		, <&gpio1  10 (GPIO_ACTIVE_LOW | GPIO_PULL_UP)>
+		;
 	};
 };
 &xiao_spi { status = "disabled"; };
